# OpenGL-Project-Template

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  ReadMe.md  license
code/: main.cpp
include/GLFW/install/: installplaceholder.txt
include/GLFW/install/lib/pkgconfig/: glfw3.pc
include/glad/: glad.c  glad.h
